--- a/package.json
+++ b/package.json
@@ -3,19 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@kevinwolf/formal-web": "^0.1.3",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@use-it/interval": "^1.0.0",
+    "apisauce": "^2.0.1",
+    "date-fns": "^2.16.1",
+    "easy-peasy": "^4.0.1",
+    "flag-icon-css": "^3.5.0",
+    "google-map-react": "^2.1.9",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
+    "nanoid": "^3.1.20",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.4",
+    "react-google-recaptcha": "^2.1.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-tiny-bbcode": "^0.1.4",
+    "react-window": "^1.8.6",
+    "recplayer-react": "^1.2.3",
+    "styled-components": "^5.2.1",
+    "universal-cookie": "^4.0.4",
+    "use-debounce": "^5.2.0",
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "g": "plop"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "plop": "^2.7.4"
   }
 }
