--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
     "nanoid": "^3.1.20",
+    "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
@@ -60,7 +61,12 @@
     "rules": {
       "react-hooks/exhaustive-deps": "off",
       "import/no-anonymous-default-export": "off",
-      "prettier/prettier": ["warn", { "endOfLine": "auto" }]
+      "prettier/prettier": [
+        "warn",
+        {
+          "endOfLine": "auto"
+        }
+      ]
     }
   },
   "browserslist": {
