--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "g": "plop",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "prettier": "prettier --check src/**/*.js"
+    "prettier": "prettier --check src/**/*.js",
+    "commit": "git-cz"
   },
   "eslintConfig": {
     "extends": [
@@ -88,11 +89,18 @@
     "@storybook/node-logger": "^6.1.14",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.14",
+    "commitizen": "^4.2.3",
     "customize-cra": "^1.0.0",
+    "cz-customizable": "^6.3.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "plop": "^2.7.4",
     "prettier": "2.2.1",
     "react-app-rewired": "^2.1.8"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
   }
 }
