--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
     "cz-customizable": "^6.3.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
     "plop": "^2.7.4",
     "prettier": "2.2.1",
     "react-app-rewired": "^2.1.8"
@@ -102,5 +104,13 @@
     "commitizen": {
       "path": "node_modules/cz-customizable"
     }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
