--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "4.2.13",
     "react-google-recaptcha": "^2.1.0",
+    "react-helmet": "^6.1.0",
     "react-outside-click-handler": "^1.3.0",
     "react-scripts": "4.0.1",
     "react-tiny-bbcode": "^0.1.4",
