--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.14",
     "commitizen": "^4.2.3",
+    "compression-webpack-plugin": "6.0.5",
     "customize-cra": "^1.0.0",
     "cz-customizable": "^6.3.0",
     "eslint-config-prettier": "^7.1.0",
