style(other): lint, text and link fixes

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "prettier": "prettier --check src/**/*.js",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "lint-js": "eslint --ignore-path .gitignore --ignore-pattern \"!**/.*\" ."
   },
   "eslintConfig": {
     "extends": [
