--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "lint-staged": "^10.5.3",
     "plop": "^2.7.4",
     "prettier": "2.2.1",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "storybook-addon-styled-component-theme": "^2.0.0"
   },
   "config": {
     "commitizen": {
