--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@kevinwolf/formal-web": "^0.1.3",
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@reach/router": "^1.3.4",
@@ -12,34 +12,34 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@use-it/interval": "^1.0.0",
-    "apisauce": "^2.0.1",
-    "date-fns": "^2.16.1",
+    "apisauce": "^2.1.1",
+    "date-fns": "^2.21.1",
     "easy-peasy": "^4.0.1",
     "elma-js": "https://github.com/ville-j/elma-js",
     "flag-icon-css": "^3.5.0",
     "google-map-react": "^2.1.9",
     "level-editor-gui": "https://github.com/elmadev/level-editor-gui.git",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "moment-timezone": "^0.5.32",
-    "nanoid": "^3.1.20",
-    "query-string": "^6.13.8",
+    "moment-timezone": "^0.5.33",
+    "nanoid": "^3.1.22",
+    "query-string": "6.14.1",
     "react": "^17.0.1",
-    "react-beautiful-dnd": "^13.0.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "4.2.13",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet-async": "^1.0.9",
     "react-outside-click-handler": "^1.3.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "4.0.3",
     "react-tiny-bbcode": "^0.1.4",
     "react-window": "^1.8.6",
     "recplayer-react": "^1.2.3",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.2.3",
     "universal-cookie": "^4.0.4",
-    "use-debounce": "^5.2.0",
+    "use-debounce": "^6.0.1",
     "web-vitals": "^0.2.4",
-    "yup": "^0.32.8"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-app-rewired start",
