--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-helmet-async": "^1.0.9",
     "react-outside-click-handler": "^1.3.0",
+    "react-query": "^3.15.2",
     "react-scripts": "4.0.3",
     "react-tiny-bbcode": "^0.1.4",
     "react-window": "^1.8.6",
