--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@kevinwolf/formal-web": "^0.1.3",
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@reach/router": "^1.3.4",
