--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "4.0.3",
     "react-tiny-bbcode": "^0.1.4",
     "react-window": "^1.8.6",
+    "recharts": "^2.2.0",
     "recplayer-react": "^1.4.0",
     "styled-components": "^5.2.3",
     "universal-cookie": "^4.0.4",
