--- a/.github/workflows/deployment-live.yml
+++ b/.github/workflows/deployment-live.yml
@@ -20,10 +20,10 @@ jobs:
     
       - name: Replace config values
         run: |
-          sed -i "s|https://apitest.elma.online/|${{ secrets.API_URL_LIVE }}|g" config.js
-          sed -i "s|'test/'|${{ secrets.S3_SUB_FOLDER_LIVE }}|g" config.js
-          sed -i "s|${url}u/|${{ secrets.UP_LIVE }}|g" config.js
-          sed -i "s|6Le-n9QUAAAAAG-3bYyysXddxwD6I6iJeDBTHf2r|${{ secrets.RECAPTCHA_LIVE }}|g" config.js
+          sed -i "s|https://apitest.elma.online/|${{ secrets.API_URL_LIVE }}|g" src/config.js
+          sed -i "s|'test/'|${{ secrets.S3_SUB_FOLDER_LIVE }}|g" src/config.js
+          sed -i "s|${url}u/|${{ secrets.UP_LIVE }}|g" src/config.js
+          sed -i "s|6Le-n9QUAAAAAG-3bYyysXddxwD6I6iJeDBTHf2r|${{ secrets.RECAPTCHA_LIVE }}|g" src/config.js
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
