--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^3.4.0",
+    "@hotjar/browser": "^1.0.9",
     "@kevinwolf/formal-web": "^0.1.3",
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "^4.11.2",
