--- a/.github/workflows/deployment-live.yml
+++ b/.github/workflows/deployment-live.yml
@@ -24,6 +24,7 @@ jobs:
           sed -i "s|'test/'|${{ secrets.S3_SUB_FOLDER_LIVE }}|g" config.js
           sed -i "s|${url}u/|${{ secrets.UP_LIVE }}|g" config.js
           sed -i "s|6Le-n9QUAAAAAG-3bYyysXddxwD6I6iJeDBTHf2r|${{ secrets.RECAPTCHA_LIVE }}|g" config.js
+          sed -i "s|hotJarId: 0|hotJarId: ${{ secrets.HOTJAR }}|g" config.js
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
