--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@fingerprintjs/fingerprintjs": "^3.4.0",
+    "@fingerprintjs/fingerprintjs": "^4.5.1",
     "@hotjar/browser": "^1.0.9",
     "@kevinwolf/formal-web": "^0.1.3",
-    "@material-ui/core": "4.11.3",
-    "@material-ui/icons": "^4.11.2",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/icons": "4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "apisauce": "^2.1.1",
+    "apisauce": "^3.1.0",
     "date-fns": "^4.1.0",
     "easy-peasy": "^4.0.1",
     "elma-js": "https://github.com/ville-j/elma-js",
@@ -23,25 +23,25 @@
     "google-map-react": "^2.1.9",
     "level-editor-gui": "https://github.com/elmadev/level-editor-gui.git",
     "lodash": "^4.17.21",
-    "nanoid": "^3.1.31",
-    "query-string": "6.14.1",
+    "nanoid": "^5.0.8",
+    "query-string": "9.1.1",
     "react": "^17.0.1",
-    "react-beautiful-dnd": "^13.1.0",
+    "react-beautiful-dnd": "13.1.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "4.2.13",
-    "react-google-recaptcha": "^2.1.0",
-    "react-helmet-async": "^1.0.9",
+    "react-google-recaptcha": "^3.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-outside-click-handler": "^1.3.0",
     "react-query": "^3.15.2",
-    "react-tiny-bbcode": "^0.1.4",
-    "react-window": "^1.8.6",
-    "recharts": "^2.2.0",
+    "react-tiny-bbcode": "^0.4.0",
+    "react-window": "1.8.10",
+    "recharts": "2.13.3",
     "recplayer-react": "^1.7.2",
     "styled-components": "^5.2.3",
-    "universal-cookie": "^4.0.4",
-    "use-debounce": "^6.0.1",
+    "universal-cookie": "^7.2.2",
+    "use-debounce": "^10.0.4",
     "web-vitals": "^0.2.4",
-    "yup": "^0.32.9"
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "vite",
@@ -97,9 +97,9 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.14",
     "@vitejs/plugin-react": "^4.3.3",
-    "commitizen": "^4.2.3",
+    "commitizen": "^4.3.1",
     "compression-webpack-plugin": "6.0.5",
-    "cz-customizable": "^6.3.0",
+    "cz-customizable": "^7.2.1",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -108,8 +108,8 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
-    "plop": "^2.7.4",
+    "lint-staged": "^15.2.10",
+    "plop": "^4.0.1",
     "prettier": "^3.3.3",
     "rollup-plugin-polyfill-node": "^0.12.0",
     "storybook-addon-styled-component-theme": "^2.0.0",
