--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@reach/router": "^1.3.4",
+    "@tanstack/react-router": "^1.79.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -75,6 +75,7 @@
     "@storybook/node-logger": "^6.1.14",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.14",
+    "@tanstack/router-devtools": "^1.79.0",
     "@vitejs/plugin-react": "^4.3.3",
     "commitizen": "^4.3.1",
     "cz-customizable": "^7.2.1",
