--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "date-fns": "^4.1.0",
     "easy-peasy": "^6.0.5",
     "elma-js": "https://github.com/ville-j/elma-js",
-    "flag-icon-css": "^3.5.0",
+    "flag-icons": "^7.2.3",
     "google-map-react": "^2.1.9",
     "level-editor-gui": "https://github.com/elmadev/level-editor-gui.git",
     "lodash": "^4.17.21",
