--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^5.59.20",
     "@tanstack/react-router": "^1.79.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -32,7 +34,6 @@
     "react-google-recaptcha": "^3.1.0",
     "react-helmet-async": "^2.0.5",
     "react-outside-click-handler": "^1.3.0",
-    "react-query": "^3.15.2",
     "react-tiny-bbcode": "^0.4.0",
     "react-window": "1.8.10",
     "recharts": "2.13.3",
