--- a/.github/workflows/deployment-test.yml
+++ b/.github/workflows/deployment-test.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: 22
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
@@ -31,6 +31,6 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          source: "build/*"
-          target: "${{ secrets.SSH_BUILD_PATH }}"
+          source: 'build/*'
+          target: '${{ secrets.SSH_BUILD_PATH }}'
           strip_components: 1
