--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "vite",
+    "start": "vite --mode test",
+    "start:local": "vite --mode dev",
     "build": "vite build",
     "serve": "vite preview",
     "g": "plop",
