feat(lgr): delete lgr for mods

--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-VITE_API_URL=http://localhost:3003/
+VITE_API_URL=https://apitest.elma.online/
 VITE_S3_SUB_FOLDER=test/
 VITE_UP_URL=https://apitest.elma.online/u/
 VITE_RECAPTCHA=6Le-n9QUAAAAAG-3bYyysXddxwD6I6iJeDBTHf2r
