--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "packageManager": "yarn@1.22.19",
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fingerprintjs/fingerprintjs": "^4.5.1",
