--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "easy-peasy": "^6.0.5",
     "elma-js": "https://github.com/ville-j/elma-js",
     "flag-icons": "^7.2.3",
-    "google-map-react": "^2.1.9",
+    "leaflet": "^1.9.4",
     "level-editor-gui": "https://github.com/elmadev/level-editor-gui.git",
     "lodash": "^4.17.21",
     "memoizee": "^0.4.17",
@@ -39,6 +39,7 @@
     "react-dropzone": "14.3.5",
     "react-google-recaptcha": "^3.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-leaflet": "4.2.1",
     "react-outside-click-handler": "^1.3.0",
     "react-tiny-bbcode": "^0.4.0",
     "react-window": "1.8.10",
